<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lets Draw!</string>
    <string name="welcome">Welcome</string>
    <string name="menu_settings">Settings</string>
    
    <string name="color">Color</string>
    <string name="black">Black</string> 
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="red">Red</string>
    <string name="magenta">Hot Pink</string>
    
    <string name="orange">Orange</string>
    <string name="green">Green</string>
  	<string name="purple">Purple</string>
       
    <string name="action">Pen | Eraser</string>
    <string name="draw">Pen</string>
    <string name="erase">Eraser</string>
    
    <string name="action2">Instructions</string>
    <string name="page1">Draw a blue C</string>
    <string name="page2">Draw a black A</string>
    <string name="page3">Draw a yellow L</string>
    
    <string name="userButton">Next</string>
        
</resources>